refactor(launcher): split LauncherMain 678->303, EnvironmentSetup 640->166, LauncherWindow 500->301
EnvironmentSetup -> ScriptOutputClassifier/IdleWatchdog/SetupScriptLocator. LauncherMain -> SessionLog/SetupProgressAdapter/SetupDetailParser/LauncherDialogs/LaunchArgs. LauncherWindow -> EtaEstimator/LogoRenderer. AppLauncher -> MainClassResolver/JavaExecutableResolver. Shared LogRotator/ByteSizes/LauncherTheme. Exit-code 0/10, phase-tokens, single-instance ordering, force-update handshake and auto-update line-scan preserved; updater API untouched.